@@ -46,6 +46,8 @@ Improvements
 * Improve efficiency of ``GGti::contains()`` method
 * [`2191 <https://cta-redmine.irap.omp.eu/issues/2191>`_] -
   Add ``GFitsTableCol::scale()`` method
+* [`2183 <https://cta-redmine.irap.omp.eu/issues/2183>`_] -
+  Allow source position fitting for Fermi-LAT data
 * [`2178 <https://cta-redmine.irap.omp.eu/issues/2178>`_] -
   Add spectral model constructor to ``GModelSpectralNodes`` class
 * [`1864 <https://cta-redmine.irap.omp.eu/issues/1864>`_] -
