@@ -18,8 +18,9 @@
         Implement code generator for GammaLib extensions (#2190)
         Implement COMPTEL event list support (#2187)
         Implement COMPTEL response computation (#2186)
-        Correct output of COMPTEL DRB fitting XML model (#2184)
         Add COMPTEL SDA, SDB and ICT response files (#2186)
+        Correct output of COMPTEL DRB fitting XML model (#2184)
+        Allow source position fitting for Fermi-LAT data (#2183)
         Add GModelSpectralNodes spectral model constructor (#2178)
         Fix UTC rounding error in GTime::utc() method (#2177)
         Add time parameter to GApplicationPar class (#1864)
